Sutter Health/src/objects/Rates__c.object
<CustomObject>
    <fields>
        <fullName>Composite__c</fullName>
        <formula>IF(AND(Tier_Type__c == &apos;Tier 1&apos;,Tier_1_Composite__c &lt;&gt; &apos;&apos;, Tier_1_Composite__c &lt;&gt; NULL),&apos;$&apos;+Tier_1_Composite__c,&apos;&apos;)</formula>
        <label>Composite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_EE1_EE2__c</fullName>
        <formula>IF(Tier_Type__c == &apos;Tier 3&apos;,&apos;$&apos;+Tier_3_EE__c+&apos; / &apos;+&apos;$&apos;+Tier_3_EE1__c+&apos; / &apos;+&apos;$&apos;+Tier_3_EE2__c,&apos;&apos;)</formula>
        <label>EE / EE1 / EE2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_EF__c</fullName>
        <formula>IF( Tier_Type__c == &apos;Tier 2&apos;, &apos;$&apos;+Tier_2_EE__c + &apos; / &apos;+ &apos;$&apos;+Tier_2_EF__c,&apos;&apos;)</formula>
        <label>EE / EF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_ES_EC_ECH_EF__c</fullName>
        <formula>IF(Tier_Type__c == &apos;Tier 5&apos;,&apos;$&apos;+Tier_5_EE__c+&apos; / &apos;+&apos;$&apos;+Tier_5_ES__c+&apos; / &apos;+&apos;$&apos;+Tier_5_EC__c+&apos; / &apos;+&apos;$&apos;+Tier_5_ECH__c+&apos; / &apos;+&apos;$&apos;+Tier_5_EF__c,&apos;&apos;)</formula>
        <label>EE / ES / EC / ECH / EF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_ES_EC_EF__c</fullName>
        <formula>IF(Tier_Type__c == &apos;Tier 4&apos;,&apos;$&apos;+Tier_4_EE__c+&apos; / &apos;+&apos;$&apos;+Tier_4_ES__c+&apos; / &apos;+&apos;$&apos;+Tier_4_EC__c+&apos; / &apos;+&apos;$&apos;+Tier_4_EF__c,&apos;&apos;)</formula>
        <label>EE / ES / EC / EF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Alias_Name__c</fullName>
        <label>Group Alias Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>IF( Group_Alias_Name__c  &lt;&gt; NULL &amp;&amp; Group_Alias_Name__c  &lt;&gt; &apos;&apos;,Group_Alias_Name__c  , Group_Type__c )</formula>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <label>Group Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Plan_Rider_Plan__c</fullName>
        <label>Medical Plan - Rider Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Medical Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type_Tier_Group__c</fullName>
        <externalId>true</externalId>
        <label>Plan-Type-Tier-Group</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Quoted Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Form</label>
        <referenceTo>Incumbent_Carrier__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Card_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card ID</label>
        <referenceTo>Rate_Card__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rider_Plan_Name__c</fullName>
        <label>Rider Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Case_Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Case Notification</label>
        <referenceTo>Employer_Group_Data__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_Sign_Off__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Sign Off</label>
        <referenceTo>Sold_Sign_Off__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier_1_Composite__c</fullName>
        <label>Tier 1 Composite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2_EE__c</fullName>
        <label>Tier 2 EE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2_EF__c</fullName>
        <label>Tier 2 EF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_3_EE1__c</fullName>
        <label>Tier 3 EE1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_3_EE2__c</fullName>
        <label>Tier 3 EE2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_4_EC__c</fullName>
        <label>Tier 4 EC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_4_EF__c</fullName>
        <label>Tier 4 EF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_4_ES__c</fullName>
        <label>Tier 4 ES</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_5_ECH__c</fullName>
        <label>Tier 5 ECH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_5_EC__c</fullName>
        <label>Tier 5 EC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_5_EF__c</fullName>
        <label>Tier 5 EF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_5_ES__c</fullName>
        <label>Tier 5 ES</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Type__c</fullName>
        <label>Tier Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Rates</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>